<resources>
    <string name="app_name">Cálculo de IMC (Índice de Masa Corporal)</string>
    <string name="procesar">Procesar</string>
    <string name="ingrese_su_peso_lb">Ingrese su peso (lb)</string>
    <string name="ingrese_su_estatura_cm">Ingrese su estatura (cm)</string>
    <string name="todo">TODO</string>
    <string name="estatura">Estatura</string>
    <string name="peso">peso</string>
    <string name="peso_capitalized">Peso</string>
    <string name="_0">0</string>
    <string name="mostrar_resultado">Mostrar Resultado</string>
</resources>
