<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <ImageView
        android:id="@+id/dice_image"
        android:layout_width="wrap_content"
        android:layout_height="255dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_imc" />

    <TextView
        android:id="@+id/estatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:text="@string/estatura"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/estatura_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_su_estatura_cm"
        android:inputType="number"
        android:padding="15sp" />

    <TextView
        android:id="@+id/peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:text="@string/peso_capitalized"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/peso_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_su_peso_lb"
        android:inputType="number"
        android:padding="15sp" />

    <Button
        android:id="@+id/procesar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:padding="25sp"
        android:text="@string/procesar"
        android:textSize="18sp" />
</LinearLayout>